CMAKE_MINIMUM_REQUIRED(VERSION 2.9)

PROJECT("SerializerTest")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Wall -std=c99 -O2 -fwrapv")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -O2 -std=c++11")

IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
ENDIF()

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
)

LINK_DIRECTORIES(
	${PROJECT_SOURCE_DIR}
)

AUX_SOURCE_DIRECTORY(./ PROJECT_SRC)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME})
